IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
5/6/15: IMOD_4-8-32
5/6/15: Added preliminary version of preNID program from Mauro Maiorca.

5/6/15: Fixed Batchruntomo's use of boundary models and specific X-ray models
when running with an FEI file where the pixel size gets transferred to the
standard header; also fixed use of a generic X-ray model modeled on images at
a different magnification.

5/6/15: Added option to Imodtrans to set the image reference information of
model to a given image file before any operations.

5/5/15: In eTomo - Batchruntomo Interface, corrected the instructions in the
project log for Windows.(Bug# 1879)

5/4/15: Fixed running Batchruntomo from etomo's command file under Cygwin.

5/3/15: IMOD_4-8-31
5/3/15: Added RMS value to standard Fortran header output if it was apparently
computed and added -rms option to Header program.  Started initializing RMS as
-1 to conform to new 2014 MRC standard and added support for the MRC version
number.

5/2/15: Added more 3dmod messages for setting object properties.

5/1/15: In eTomo - Tomogram Combination, automatically filling in Z min/max
when "Use automatic patch fitting" is selected.(Bug# 1878)

5/1/15: In eTomo - Fine Alignment, Added a global XTilt option.(Bug# 1793)

5/1/15: In eTomo - Tomogram Combination, converted matchorwarp parameters to
PIP.(Bug# 1866)

5/1/15: In eTomo - Tomogram Combination, added controls for dualvolmatch.
(Bug# 1865)

4/30/15: Added an option to Tilt to get a thresholded reprojection of fixed
values for pixels beyond a threshold.

4/30/15: Added -M option to Clip to do thresholding with a minimum size in 2D
or 3D for regions beyond the threshold on one side.

4/25/15: IMOD_4-7-15
4/24/15: In eTomo - Join fixed the trial join and rejoin "use every" spinners.
(Bug# 1868)

4/23/15: In eTomo - Tomogram Combination, setting InvertYLimits in
corrsearch3d when the origcoms is present.  This mitigates a problem caused