@@ -1,5 +1,7 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+5/9/15: Parallelized Imodauto.
+
 5/6/15: IMOD_4-8-32
 5/6/15: Added preliminary version of preNID program from Mauro Maiorca.
 
